REGRESSION(r290776): NetworkSession::swServer depends on ENABLE(SERVICE_WORKER) https://bugs.webkit.org/show_bug.cgi?id=237432

Unreviewed build fix.


* NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::terminateRemoteWorkerContextConnectionWhenPossible):



Canonical link: https://commits.webkit.org/248025@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290781 268f45cc-cd09-0410-ab3c-d52691b4dbfc